@@ -6,11 +6,11 @@ import pyprind
 
 def example_2():
     n = 1000000
-    my_bar = pyprind.ProgBar(n, stream=1, track_time=True)
+    my_bar = pyprind.ProgBar(n, stream=1, track_time=True, title='My Progress Bar')
     for i in range(n):
         # do some computation
         my_bar.update()
-    print('Print elapsed time again ...')
+    print('\n\nPrint tracking object ...\n')
     print(my_bar)
 
 if __name__ == '__main__':
